Icons added to services section
- svg images
- service section altered
- css to size icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -470,6 +470,12 @@ strong{
     margin-right: 10%;
 }
 
+#services .jobs .job .icon {
+    height: 40px;
+    margin-bottom: 30px;
+}
+
+
 @media screen and (max-width: 770px){
     #services .jobs{
         flex-direction: column;
