--- a/templates/Joe Rutland/sections/header.twig
+++ b/templates/Joe Rutland/sections/header.twig
@@ -8,7 +8,7 @@
     {% endif %}
     <meta name="description" content="{{page.metadescrip}}">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="{{ROOT}}assets/css/main-dist.css">
+    <link rel="stylesheet" href="{{ROOT}}assets/css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpeg" href="{{ROOT}}{{site.fav_icon}}" />
     <link rel="icon" type="image/png" href="{{ROOT}}{{site.fav_icon}}" />
@@ -27,6 +27,7 @@
     </script>
 
     <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 
