--- a/templates/Joe Rutland/sections/footer.twig
+++ b/templates/Joe Rutland/sections/footer.twig
@@ -2,7 +2,7 @@
 
 </div><!--//wrapper-->
 
-<section id="footer" data-aos="fade-up" data-aos-duration="2000">
+<section id="footer" data-aos="zoom-in">
     <div class="wrapper">
         <h2>Got a design project? Great, I'm available <img src="{{ROOT}}assets/images/wave-emoji.png" alt="wave emoji"></h2>
         
@@ -35,6 +35,16 @@
 
 
     <script src="{{ROOT}}assets/js/joe.js"></script>
+    <script src="{{ROOT}}assets/js/aos-dist.js"></script>
+    <script>
+    AOS.init({
+      offset: 200,
+      duration: 800,
+      easing: 'ease-in-sine',
+      delay: 100,
+    });
+  </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     
 </body>
