--- a/templates/Joe Rutland/sections/header.twig
+++ b/templates/Joe Rutland/sections/header.twig
@@ -8,26 +8,14 @@
     {% endif %}
     <meta name="description" content="{{page.metadescrip}}">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="{{ROOT}}assets/css/main.css">
+    <link rel="stylesheet" href="{{ROOT}}assets/css/main-dist.css">
+    <link rel="stylesheet" href="{{ROOT}}assets/css/aos-dist.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpeg" href="{{ROOT}}{{site.fav_icon}}" />
     <link rel="icon" type="image/png" href="{{ROOT}}{{site.fav_icon}}" />
     <link rel="icon" type="image/gif" href="{{ROOT}}{{site.fav_icon}}" />
 
-    <!-- Hotjar Tracking Code for https://www.jrutlanddesign.co.uk -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:766272,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
-
     <script src='https://www.google.com/recaptcha/api.js'></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 
