home page content
- linked up some of the main titles
- removed AOS on some section / added on others

--- a/templates/Joe Rutland/sections/home/about.twig
+++ b/templates/Joe Rutland/sections/home/about.twig
@@ -1,6 +1,8 @@
-<section id="{{section.name}}" data-aos="fade-up" data-aos-duration="2000">
-    <h2>{{section.sub_text}}</h2>
-    <h3>{{section.heading_text}}</h3>
+<section id="{{section.name}}" >
+    <a href="/services" class="titleAnc">
+        <h2>{{section.sub_text}}</h2>
+        <h3>{{section.heading_text}}</h3>
+    </a>
     
     <div class="about-wrapper">
         <div class="text">
@@ -11,7 +13,7 @@
             <a href="{{section.pagelink}}" class="linkBtn">more about me</a>
 
         </div>
-        <img src="{{ROOT}}{{section.image}}" alt="Picture of me" class="me"/>
+        <img src="{{ROOT}}{{section.image}}" alt="Picture of me" class="me" data-aos="fade-left"/>
     </div>
     <span class="clearFix"></span>
 </section>
