--- a/templates/Joe Rutland/sections/home/intro.twig
+++ b/templates/Joe Rutland/sections/home/intro.twig
@@ -1,4 +1,4 @@
-<section id="{{section.name}}">
+<section id="{{section.name}}" data-aos="fade-right">
     <h1>{{section.heading_text}}</h1>
     <h2>{{section.sub_text}}<br>{{section.availability | raw}}</h2>
 
