--- a/templates/Joe Rutland/sections/home/services.twig
+++ b/templates/Joe Rutland/sections/home/services.twig
@@ -1,6 +1,8 @@
-<section id="{{section.name}}" data-aos="fade-up" data-aos-duration="2000">
-    <h2>{{section.sub_text}}</h2>
-    <h3>{{section.heading_text}}</h3>
+<section id="{{section.name}}" >
+    <a href="/services" class="titleAnc">
+        <h2>{{section.sub_text}}</h2>
+        <h3>{{section.heading_text}}</h3>
+    </a>
     
     <div class="jobs">
         {% for job in section.jobs %}
