--- a/templates/Joe Rutland/sections/home/work.twig
+++ b/templates/Joe Rutland/sections/home/work.twig
@@ -1,4 +1,4 @@
-<section id="{{section.name}}" data-aos="fade-up" data-aos-duration="2000">
+<section id="{{section.name}}" >
     <h2>{{section.sub_text}}</h2>
     <h3>{{section.heading_text}}</h3>
 
