buttons added changed

--- a/templates/Joe Rutland/sections/home/about.twig
+++ b/templates/Joe Rutland/sections/home/about.twig
@@ -10,7 +10,7 @@
                 <p>{{paragaph|raw}}</p>
             {% endfor %}
 
-            <a href="{{section.pagelink}}" class="linkBtn">more about me</a>
+            <a href="{{section.pagelink}}" class="btn">more about me</a>
 
         </div>
         <img src="{{ROOT}}{{section.image}}" alt="Picture of me" class="me" data-aos="fade-left"/>
