--- a/templates/Joe Rutland/sections/home/blog.twig
+++ b/templates/Joe Rutland/sections/home/blog.twig
@@ -26,7 +26,7 @@
         {% endfor %}
     </div>
 
-    <a href="{{ROOT}}blog" class="linkBtn">View more from my blog</a>
+    <a href="{{ROOT}}blog" class="btn">View more from my blog</a>
     
     
 </section>
