body wrap to cover the reveal footer

--- a/templates/Joe Rutland/sections/footer.twig
+++ b/templates/Joe Rutland/sections/footer.twig
@@ -1,6 +1,7 @@
 
 
 </div><!--//wrapper-->
+</div><!-- // bodywrap-->
 
 <section id="footer" data-aos="zoom-in">
     <div class="wrapper">
@@ -21,8 +22,8 @@
             </div>
         </div>
        
-       </div><!--//wrapper-->
-    </section>
+    </div><!--//wrapper-->
+</section>
 
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -37,13 +38,13 @@
     <script src="{{ROOT}}assets/js/joe.js"></script>
     <script src="{{ROOT}}assets/js/aos-dist.js"></script>
     <script>
-    AOS.init({
-      offset: 200,
-      duration: 800,
-      easing: 'ease-in-sine',
-      delay: 100,
-    });
-  </script>
+        AOS.init({
+        offset: 200,
+        duration: 800,
+        easing: 'ease-in-sine',
+        delay: 100,
+        });
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     
